kubernetes/apps/tiny-coffee/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tiny-coffee
spec:
  selector:
    app: tiny-coffee
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
